--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Link do js -->
     <script src="script.js"></script>
+    <!-- Link do google icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=keyboard_arrow_down" />
 </head>
 
 <body>
@@ -31,39 +33,9 @@
             <div class="card" onclick="abrirCard(this)">
                 <img src="../imgs/foto-hugo.jpg" alt="Hugo">
                 <h3>Hugo de Oliveira Fonsêca</h3>
-                <div class="card-conteudo">
-                    <p>Aluno de Ciência da Computação</p>
-                    <ul>
-                        <li>Java</li>
-                        <li>JavaScript</li>
-                        <li>HTML + CSS</li>
-                        <li>Bootstrap</li>
-                        <li>AWS (básico)</li>
-                        <li>Node.js (básico)</li>
-                    </ul>
-                </div>
-            </div>
-            
-            <!-- Unidade de card -->
-            <div class="card" onclick="abrirCard(this)">
-                <img src="../imgs/foto-hugo.jpg" alt="Hugo">
-                <h3>Hugo de Oliveira Fonsêca</h3>
-                <div class="card-conteudo">
-                    <p>Aluno de Ciência da Computação</p>
-                    <ul>
-                        <li>Java</li>
-                        <li>JavaScript</li>
-                        <li>HTML + CSS</li>
-                        <li>Bootstrap</li>
-                        <li>AWS (básico)</li>
-                        <li>Node.js (básico)</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- Unidade de card -->
-            <div class="card" onclick="abrirCard(this)">
-                <img src="../imgs/foto-hugo.jpg" alt="Hugo">
-                <h3>Hugo de Oliveira Fonsêca</h3>
+                <span class="material-symbols-outlined">
+                    keyboard_arrow_down
+                </span>
                 <div class="card-conteudo">
                     <p>Aluno de Ciência da Computação</p>
                     <ul>
