--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -49,6 +49,24 @@
                 </div>
             </div>
 
+            <div class="card" onclick="abrirCard(this)">
+                <img src="../imgs/foto-davi.jpg" alt="Davi">
+                <h3>Davi Ramos Ferreira</h3>
+                <span class="material-symbols-outlined">
+                    keyboard_arrow_down
+                </span>
+                <div class="card-conteudo">
+                    <p>Aluno de Sistemas de Informação</p>
+                    <ul>
+                        <li>Java</li>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>HTML + CSS</li>
+                        <li>Node.js (básico)</li>
+                    </ul>
+                </div>
+            </div>
+
         </section>
     </main>
 
