--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -22,6 +22,11 @@
         <article>
             <p>Nesse projeto fizemos um site com as receitas favoritas dos nossos membros.</p>
         </article>
+        <div>
+            <button onclick="toggleTodos('abrir')">Abrir Todos</button>
+            <button onclick="toggleTodos('fechar')">Fechar Todos</button>
+            <button onclick="alternarTema()">Alternar Tema</button>
+        </div>
     </header>
 
     <!-- Principal -->
