Commit pag avaliar + receita(+1)
Página para o cliente avaliar o site concluída.

Receita de Peixe ao leite de coco adicionada.

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -79,7 +79,7 @@
     <footer>
         <nav>
             <a href="receitas.html">Receitas</a>
-            <a href="contato.html">Avaliar</a>
+            <a href="avaliar.html">Avaliar</a>
         </nav>
     </footer>
 
