--- a/Projeto/avaliar.html
+++ b/Projeto/avaliar.html
@@ -8,8 +8,10 @@
 
     <!-- Link do css -->
     <link rel="stylesheet" href="style.css">
+    <!-- Link do css -->
+    <link rel="stylesheet" href="styleavaliar.css">
     <!-- Link do js -->
-    <script src="script.js"></script>
+    <script src="scriptAvaliar.js"></script>
     <!-- Link do google icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=keyboard_arrow_down" />
@@ -27,11 +29,25 @@
 
     <!-- Principal -->
     <main>
-        <!-- ? -->
         <section class="">
+            <!-- Conteúdo principal -->
+            <div class="rating-container">
+                <div class="stars" id="star-container">
+                    <span data-value="1">&#9733;</span>
+                    <span data-value="2">&#9733;</span>
+                    <span data-value="3">&#9733;</span>
+                    <span data-value="4">&#9733;</span>
+                    <span data-value="5">&#9733;</span>
+                </div>
+                <p id="rating-output">Selecione quantas estrelas nós merecemos</p>
+            </div>
 
-            
-
+            <div class="form-container">
+                <form class="opinion-form">
+                    <textarea id="opinion" name="opinion" rows="4" placeholder="Digite aqui sua opinião..."></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
         </section>
     </main>
 
