--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -72,6 +72,24 @@
                 </div>
             </div>
 
+            <div class="card" onclick="abrirCard(this)">
+                <img src="../imgs/foto-Alex.jpg" alt="Alex">
+                <h3>Alex Campos Ferreira Chaves</h3>
+                <span class="material-symbols-outlined">
+                    keyboard_arrow_down
+                </span>
+                <div class="card-conteudo">
+                    <p>Aluno de Engenharia da Computação</p>
+                    <ul>
+                        <li>Java</li>
+                        <li>JavaScript</li>
+                        <li>HTML + CSS</li>
+                        <li>C#</li>
+                        <li>Python</li>
+                    </ul>
+                </div>
+            </div>
+
         </section>
     </main>
 
