--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -90,6 +90,23 @@
                 </div>
             </div>
 
+            <div class="card" onclick="abrirCard(this)">
+                <img src="../imgs/foto-jp.jpg" alt="João Pedro">
+                <h3>João Pedro Costa Lira</h3>
+                <span class="material-symbols-outlined">
+                    keyboard_arrow_down
+                </span>
+                <div class="card-conteudo">
+                    <p>Aluno de Sistemas de Informação</p>
+                    <ul>
+                        <li>Java</li>
+                        <li>JavaScript</li>
+                        <li>HTML + CSS</li>
+                        <li>Python</li>
+                    </ul>
+                </div>
+            </div>
+
         </section>
     </main>
 
