--- a/Projeto/receitas.html
+++ b/Projeto/receitas.html
@@ -209,7 +209,7 @@
                          <!-- Unidade de receita -->
             <div class="card" onclick="abrirCard(this)">
 
-                <img src="../imgs/strogonoff.png" alt="Strogonoff de Frango">
+                <img src="../imgs/strogonoff.jpg" alt="Strogonoff de Frango">
 
                 <h3>Strogonoff de Frango</h3>
                 <span class="material-symbols-outlined">
