--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -36,7 +36,9 @@
 
             <!-- Unidade de card -->
             <div class="card" onclick="abrirCard(this)">
-                <img src="../imgs/foto-hugo.jpg" alt="Hugo">
+                <div class="content-img">
+                    <img src="../imgs/foto-hugo.jpg" alt="Hugo">
+                </div>
                 <h3>Hugo de Oliveira Fonsêca</h3>
                 <span class="material-symbols-outlined">
                     keyboard_arrow_down
@@ -55,7 +57,9 @@
             </div>
 
             <div class="card" onclick="abrirCard(this)">
+                <div class="content-img">
                 <img src="../imgs/foto-davi.jpg" alt="Davi">
+                </div>
                 <h3>Davi Ramos Ferreira</h3>
                 <span class="material-symbols-outlined">
                     keyboard_arrow_down
@@ -73,7 +77,9 @@
             </div>
 
             <div class="card" onclick="abrirCard(this)">
+                <div class="content-img">
                 <img src="../imgs/foto-Alex.jpg" alt="Alex">
+                </div>
                 <h3>Alex Campos Ferreira Chaves</h3>
                 <span class="material-symbols-outlined">
                     keyboard_arrow_down
@@ -91,7 +97,9 @@
             </div>
 
             <div class="card" onclick="abrirCard(this)">
-                <img src="../imgs/foto-jp.jpg" alt="João Pedro">
+                <div class="content-img jp">
+                <img src="../imgs/foto-jp.png" alt="João Pedro">
+                </div>
                 <h3>João Pedro Costa Lira</h3>
                 <span class="material-symbols-outlined">
                     keyboard_arrow_down
